# SimplicityHL

./: CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  flake.nix
.github/workflows/: lsp-ci.yml  publish-lsp.yml  rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compile_parse_tree.rs  compile_text.rs  display_parse_tree.rs  parse_value_rtt.rs  parse_witness_json_rtt.rs  parse_witness_module_rtt.rs  reconstruct_value.rs
lsp/: .gitignore  Cargo.toml  README.md
lsp/examples/: recursive_covenant.simf
lsp/src/: backend.rs  error.rs  function.rs  main.rs  utils.rs
lsp/src/completion/: builtin.rs  jet.rs  mod.rs  tokens.rs  type_cast.rs  types.rs
src/: main.rs
vscode/: package-lock.json  package.json
vscode/src/: client.ts  commands.ts  extension.ts  find_server.ts
