[package]
name = "simplicityhl-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
simplicityhl = { path = "..", features = ["arbitrary", "serde"] }
itertools = "0.13.0"
serde_json = "1.0.105"

[dev-dependencies]
base64 = "0.22.1"

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(fuzzing)'] }

[[bin]]
name = "compile_text"
path = "fuzz_targets/compile_text.rs"
test = false
doc = false
bench = false

[[bin]]
name = "compile_parse_tree"
path = "fuzz_targets/compile_parse_tree.rs"
test = false
doc = false
bench = false

[[bin]]
name = "display_parse_tree"
path = "fuzz_targets/display_parse_tree.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_value_rtt"
path = "fuzz_targets/parse_value_rtt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_witness_json_rtt"
path = "fuzz_targets/parse_witness_json_rtt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_witness_module_rtt"
path = "fuzz_targets/parse_witness_module_rtt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "reconstruct_value"
path = "fuzz_targets/reconstruct_value.rs"
test = false
doc = false
bench = false
