[package]
name = "simplicityhl-lsp"
version = "0.2.1"
edition = "2021"
rust-version = "1.79"
description = "Language Server Protocol (LSP) server for SimplicityHL."
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlockstreamResearch/SimplicityHL"
homepage = "https://github.com/BlockstreamResearch/SimplicityHL/tree/master/lsp"
readme = "README.md"
documentation = "https://docs.rs/simplicityhl-lsp"
keywords = ["simplicity", "liquid", "bitcoin", "elements", "lsp"]

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde_json = "1.0.143"
tower-lsp-server = "0.22.1"

env_logger = "0.11.8"
thiserror = "2.0.17"

ropey = "1.6.1"
miniscript = "12"
simplicityhl = { version = "0.3.0" }
nom = "8.0.0"
lazy_static = "1.5.0"

[lints.rust]
unsafe_code = "deny"
unused_variables = "warn"
dead_code = "warn"
unreachable_code = "warn"
unused_mut = "warn"

[lints.clippy]
pedantic = "warn"
